<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.fovbe.cryptoxchangerate.ui.Convert">

    <data>
        <variable
            name="currency"
            type="com.fovbe.cryptoxchangerate.data.model.MoneyRates"/>
    </data>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <RelativeLayout
        android:id="@+id/convertRL"
        android:focusableInTouchMode="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/sixDim">

        <!--Base Information -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:textAppearanceMedium"
            android:textAlignment="center"
            android:layout_centerHorizontal="true"
            android:id="@+id/baseInfo"
            android:layout_marginBottom="@dimen/ten"/>

        <!-- Country Currency -->
        <ImageView
            android:id="@+id/countryFlag"
            android:layout_width="@dimen/flag_sm"
            android:layout_height="@dimen/flag_sm"
            android:layout_below="@id/baseInfo"
            android:layout_marginEnd="@dimen/ten"
            android:layout_marginTop="@dimen/five"
            android:layout_marginBottom="@dimen/twenty"
            app:loadImage="@{currency.countryFlag}"/>

        <TextView
            android:layout_width="wrap_content"
            android:id="@+id/currencyCode"
            android:textStyle="bold"
            android:layout_below="@id/baseInfo"
            android:textAppearance="?android:textAppearanceLarge"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/countryFlag"
            android:text="@{currency.currency}"/>

        <TextView
            android:layout_width="wrap_content"
            android:id="@+id/currencyName"
            android:layout_below="@id/currencyCode"
            android:layout_toEndOf="@id/countryFlag"
            android:textStyle="bold"
            android:layout_marginBottom="@dimen/twenty"
            android:textAppearance="?android:textAppearanceMedium"
            android:layout_height="wrap_content"
            android:text="@{currency.curName + ' ' + currency.curSym}"/>

        <android.support.design.widget.TextInputLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="@dimen/five"
            android:layout_below="@id/baseInfo"
            android:layout_alignParentEnd="true"
            android:layout_toEndOf="@id/currencyName"
            android:hint="@string/amount_hint">

            <EditText
                android:layout_width="match_parent"
                android:id="@+id/curAmount"

                android:textAppearance="?android:textAppearanceLarge"
                android:textAlignment="center"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal|number"/>
         </android.support.design.widget.TextInputLayout>

        <View
            android:layout_width="match_parent"
            android:id="@+id/divider"
            android:layout_height="@dimen/one"
            android:background="@color/light_gray"
            android:layout_below="@id/currencyName"
            android:layout_marginBottom="@dimen/ten"/>
        <!-- Bitcoin-->
        <ImageView
            android:id="@+id/btc_icon"
            android:layout_width="@dimen/flag_sm"
            android:layout_height="@dimen/flag_sm"
            android:layout_marginEnd="@dimen/ten"
            android:layout_marginTop="@dimen/five"
            android:layout_marginBottom="@dimen/twenty"
            android:layout_below="@id/divider"
            android:src="@drawable/ic_bitcoin"/>

        <TextView
            android:layout_width="wrap_content"
            android:id="@+id/btc_code"
            android:textStyle="bold"
            android:textAppearance="?android:textAppearanceLarge"
            android:layout_height="wrap_content"
            android:layout_below="@id/divider"
            android:layout_toEndOf="@id/btc_icon"
            android:text="@string/btc"/>

        <TextView
            android:layout_width="wrap_content"
            android:id="@+id/btcName"
            android:layout_below="@id/btc_code"
            android:layout_toEndOf="@id/btc_icon"
            android:textStyle="bold"
            android:layout_marginBottom="@dimen/twenty"
            android:textAppearance="?android:textAppearanceMedium"
            android:layout_height="wrap_content"
            android:text="@string/bitcoin"/>

        <android.support.design.widget.TextInputLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/five"
            android:layout_alignParentEnd="true"
            android:layout_below="@id/divider"
            android:layout_toEndOf="@id/btcName">

            <EditText
                android:layout_width="match_parent"
                android:id="@+id/btcAmount"
                android:enabled="false"
                android:textAppearance="?android:textAppearanceLarge"
                android:textAlignment="center"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal|number"/>
        </android.support.design.widget.TextInputLayout>

        <View
            android:layout_width="match_parent"
            android:id="@+id/divider1"
            android:layout_height="@dimen/one"
            android:background="@color/light_gray"
            android:layout_below="@id/btcName"
            android:layout_marginBottom="@dimen/ten"/>

        <!-- Ethereum -->
        <ImageView
            android:id="@+id/eth_icon"
            android:layout_width="@dimen/flag_sm"
            android:layout_height="@dimen/flag_sm"
            android:layout_marginEnd="@dimen/ten"
            android:layout_marginTop="@dimen/five"
            android:layout_below="@id/divider1"
            android:src="@drawable/ic_ethereum"/>

        <TextView
            android:layout_width="wrap_content"
            android:id="@+id/eth_code"
            android:textStyle="bold"
            android:layout_below="@id/divider1"
            android:textAppearance="?android:textAppearanceLarge"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/eth_icon"
            android:text="@string/eth"/>

        <TextView
            android:layout_width="wrap_content"
            android:id="@+id/ethName"
            android:layout_below="@id/eth_code"
            android:layout_toEndOf="@id/eth_icon"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:textAppearance="?android:textAppearanceMedium"
            android:layout_height="wrap_content"
            android:text="@string/ethereum"/>

        <android.support.design.widget.TextInputLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"

            android:layout_alignParentEnd="true"
            android:layout_below="@id/divider1"
            android:layout_toEndOf="@id/ethName">

            <EditText
                android:layout_width="match_parent"
                android:id="@+id/ethAmount"
                android:enabled="false"
                android:textAppearance="?android:textAppearanceLarge"
                android:textAlignment="center"
                android:layout_height="wrap_content"

                android:inputType="numberDecimal|number"/>
        </android.support.design.widget.TextInputLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorPrimary"
            android:layout_marginTop="@dimen/hrCenter"
            android:layout_below="@id/ethName"/>

        <ImageView
            android:id="@+id/baseSwitcher"
            android:layout_width="@dimen/flag_big"
            android:layout_height="@dimen/flag_big"
            android:src="@drawable/ic_transfer"
            android:layout_marginTop="@dimen/twenty"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/flag_sm"
            android:layout_below="@id/ethName"
            android:onClick="transferSwitchListener"/>
    </RelativeLayout>
    </android.support.v4.widget.NestedScrollView>



</layout>
